Modified footer to make it stick to bottom always

--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,9 @@ nav{
 }
 
 .news-letter{
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
     background-color: var(--c1);
     display: flex;
